added: startup ide (Sikulix)